@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

Package Model as ModelPackage <<Rectangle>>{
Class "<<interface>>\nReadOnlyAddressBook" as ReadOnlyAddressBook
Class "<<interface>>\nReadOnlyUserPrefs" as ReadOnlyUserPrefs
Class "<<interface>>\nModel" as Model
Class AddressBook
Class ModelManager
Class UserPrefs

Class Tutorial


class Student {
}
class Tutorial {
}

class Attendance {
}

class Submission
}

AddressBook .up.|> ReadOnlyAddressBook

ModelManager .up.|> Model
Model .right.> ReadOnlyUserPrefs
Model .left.> ReadOnlyAddressBook
ModelManager -right-> "1" AddressBook
ModelManager -right-> "1" UserPrefs
UserPrefs .up.|> ReadOnlyUserPrefs

ModelManager -down-> "*" Tutorial : filters >
ModelManager --> "*" Student : filters >
ModelManager --> "*" Submission : filters >
ModelManager --> "*" Attendance : filters >

AddressBook -->  "*" Tutorial
AddressBook -->  "*" Student
AddressBook -->  "*" Submission
AddressBook -->  "*" Attendance

@enduml
